# loterias_caixa

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: lot_caixa.py  main.py
